Add PHP dependency and track composer.lock

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         }
     ],
     "require": {
-        "inbenta/chatbot-api-connector": "dev-master"
+        "inbenta/chatbot-api-connector": "dev-master",
+        "php": "~7.1"
     },
     "autoload":{
         "psr-4":{
